fonts and colors added, link icons uploaded

--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Kevin Robinson's web development portfolio and contact information.">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ultra" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
     <nav role="navigation">
         <ul>
-            <li>Kevin Robinson</li>
-            <li>web developer</li>
+            <li class="nav-bar-top">Kevin Robinson</li>
+            <li class="nav-bar-bottom">web developer</li>
         </ul>
          
     </nav>
     <main role="main">
         <header role="banner">
-            <h1>Hi, my name is Kevin.  I am studying fullstack web development, here are some projects I have enjoyed creating.</h1>
+            <h1><span class="hero-symbols">&#9900;</span>  Hi, my name is Kevin. 
+                <br>
+                 I am studying fullstack web development, here are some projects I have enjoyed creating.  <span class="hero-symbols">&#9900;</span></h1>
         </header>
 
         <section class="button-group-main">
@@ -26,6 +31,8 @@
             <a class="button-link" href='#portfolio'><button class="portfolio-button main-button">Portfolio</button></a>
             <a class="button-link" href='#contact'><button class="contact-button main-button">Contact</button></a>
         </section>
+
+        <hr>
 
         <section id="bio">
             <p>I started studying web development with Thinkful.com recently, and am having a great time working up my skills. Learning how to program and design websites has been fascinating.  The puzzles posed and the answers required have really tested my ability to work logically and reduce complex ideas to simple ones.  Using the web development processes I have learned thus far has been very satisfying and I look forward to expanding my talents.</p>
@@ -40,7 +47,7 @@
                 <div class="portfolio-image-container">
                     <img class="portfolio-image" src="https://github.com/hotdogmcgee/Portfolio-Website/blob/master/Images/Quiz%20App%20screenshot-compressed.JPG?raw=true">
                 </div>
-                <h2>Classical Guitar Quiz App</h2>
+                <h3>Classical Guitar Quiz App</h2>
                 <p>Take a ten-question quiz on the world of classical guitar. The Quiz App uses jQuery DOM manipulation to render each page.</p>
                 <p class="portfolio-links">
                     <a href="https://github.com/hotdogmcgee/Thinkful-Quiz-App---Module-8.7-8" target="_blank">GitHub</a> 
@@ -50,7 +57,7 @@
             </div>
 
             <div class="portfolio-project">
-                <h2>More Projects on the Way!</h2>
+                <h3>More Projects on the Way!</h2>
             </div>
         </section>
 
