small styling changes

--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
             <img class="headshot" src="https://i.imgur.com/Ft37cT0.jpg">
             <h3>I can be found on these platforms.</h3>
             <ul class="contact-buttons">
-                <li><a href="https://github.com/hotdogmcgee/" target="_blank">GitHub</a></li>
-                <li><a href="https://linkedin.com/in/kevin-robinson-a05b5b181" target="_blank">LinkedIn</a></li>
-                <li>something else</li>
+                <li><a href="https://github.com/hotdogmcgee/" target="_blank"><img class="contact-icons" src="https://github.com/hotdogmcgee/Portfolio-Website/blob/master/Images/github%20icon.png?raw=true"></a></li>
+                <li><a href="https://linkedin.com/in/kevin-robinson-a05b5b181" target="_blank"><img  class="contact-icons"src="https://github.com/hotdogmcgee/Portfolio-Website/blob/master/Images/linkedIn%20icon.png?raw=true"></a></li>
             </ul>
         </section>
     </main>
