add book finder to portfolio, restyle links, add tech icons

--- a/index.html
+++ b/index.html
@@ -48,12 +48,40 @@
 
         <section id="portfolio">
             <h2>My Portfolio</h2>
+            
+            <div class="portfolio-project">
+                <div class="portfolio-image-container">
+                    <img class="portfolio-image" src="Images/Bestseller-Finder-Desktop-Screenshot.JPG">
+                </div>
+                <h3>Book Bestseller Finder</h2>
+                <p>An app that allows the user to find lists of New York Times Bestsellers. The app will then allow a user to see if the book is available in the Harvard library system. This makes use of the New York Times Book API, as well as Harvard's LibCloud API.</p>
+                <div class="icon-container">
+                    <img class="tech-icon" src="Images/jquery-logo-png--512.png">
+                    <img class="tech-icon" src="Images/JavaScript-logo-training.png">
+                    <img class="tech-icon" src="Images/HTML5_Logo_256.png">
+                    <img class="tech-icon" src="Images/css-logo-288.png">
+
+                </div>
+                <p class="portfolio-links">
+                    <a href="https://github.com/hotdogmcgee/Book-Bestseller-Finder" target="_blank">GitHub</a> 
+                    / 
+                    <a href="https://hotdogmcgee.github.io/Book-Bestseller-Finder/" target="_blank">Live</a>
+                </p>
+            </div>
+
             <div class="portfolio-project">
                 <div class="portfolio-image-container">
                     <img class="portfolio-image" src="https://github.com/hotdogmcgee/Portfolio-Website/blob/master/Images/Quiz%20App%20screenshot-compressed.JPG?raw=true">
                 </div>
                 <h3>Classical Guitar Quiz App</h2>
                 <p>Take a ten-question quiz on the world of classical guitar. The Quiz App uses jQuery DOM manipulation to render each page.</p>
+                <div class="icon-container">
+                    <img class="tech-icon" src="Images/jquery-logo-png--512.png">
+                    <img class="tech-icon" src="Images/JavaScript-logo-training.png">
+                    <img class="tech-icon" src="Images/HTML5_Logo_256.png">
+                    <img class="tech-icon" src="Images/css-logo-288.png">
+
+                </div>
                 <p class="portfolio-links">
                     <a href="https://github.com/hotdogmcgee/Thinkful-Quiz-App---Module-8.7-8" target="_blank">GitHub</a> 
                     / 
