update with Tonewood DP and Noteful projects

--- a/index.html
+++ b/index.html
@@ -48,6 +48,54 @@
 
         <section id="portfolio">
             <h2>My Portfolio</h2>
+
+            <div class="portfolio-project">
+                <div class="portfolio-image-container">
+                    <img class="portfolio-image" src="Images/tonewoodcapture-desktop.JPG">
+                </div>
+                <h3>Tonewood Data Project</h2>
+                <p>A fullstack application that brings together luthiers worldwide to make it easy to find the properties of many tonewoods. API created for CRUD operations and log-in functionality.</p>
+                <div class="icon-container">
+                        <img class="tech-icon" src="Images/nodejs_express.png">
+                        <img class="tech-icon" src="Images/postgresql-logo.jpg">
+                        <img class="tech-icon" src="Images/heroku-vector-logo.png">
+                    <img class="tech-icon" src="Images/JavaScript-logo-training.png">
+                    <img class="tech-icon" src="Images/HTML5_Logo_256.png">
+                    <img class="tech-icon" src="Images/css-logo-288.png">
+
+                </div>
+                <p class="portfolio-links">
+                    <a href="https://github.com/hotdogmcgee/tonewood-client" target="blank">Client GitHub</a> 
+                    / 
+                    <a href="https://github.com/hotdogmcgee/tonewood-api" target="blank">Server GitHub</a> 
+                    / 
+                    <a href="https://fast-shelf-60247.herokuapp.com/" target="blank">Live</a>
+                </p>
+            </div>
+
+            <div class="portfolio-project">
+                    <div class="portfolio-image-container">
+                        <img class="portfolio-image" src="Images/Notefulcapture.jpg">
+                    </div>
+                    <h3>Noteful</h2>
+                    <p>A fullstack application that allows users to create notes that can be placed in folders. API created for CRUD operations. Current build used to express full stack functionality, please excuse mobile display issues.</p>
+                    <div class="icon-container">
+                            <img class="tech-icon" src="Images/nodejs_express.png">
+                            <img class="tech-icon" src="Images/postgresql-logo.jpg">
+                            <img class="tech-icon" src="Images/now-zeit-logo.jpg">
+                        <img class="tech-icon" src="Images/JavaScript-logo-training.png">
+                        <img class="tech-icon" src="Images/HTML5_Logo_256.png">
+                        <img class="tech-icon" src="Images/css-logo-288.png">
+    
+                    </div>
+                    <p class="portfolio-links">
+                        <a href="https://github.com/hotdogmcgee/Noteful-fullstack-client" target="blank">Client GitHub</a> 
+                        / 
+                        <a href="https://github.com/hotdogmcgee/Noteful-API" target="blank">Server GitHub</a> 
+                        / 
+                        <a href="https://noteful-app-mrq0kgqfk.now.sh/" target="blank">Live</a>
+                    </p>
+                </div>
             
             <div class="portfolio-project">
                 <div class="portfolio-image-container">
