update portfolio, edit image styling, add favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link href="https://fonts.googleapis.com/css?family=Ultra" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="Images/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="Images/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="Images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="Images/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="Images/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="Images/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="Images/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="Images/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="Images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="Images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="index.js"></script>
 </head>
@@ -48,6 +65,31 @@
 
         <section id="portfolio">
             <h2>My Portfolio</h2>
+
+            <div class="portfolio-project">
+                <div class="portfolio-image-container">
+                    <img class="portfolio-image" src="Images/music-book-reviews-nokiaN9.jpg">
+                </div>
+                <h3>Music Book Reviews</h2>
+                <p>A fullstack application for students, parents, and educators to find and review educational music books.  The intention of the app is to use detailed input from educators to make clear what a given book contains and how it is or is not valuable.  I have often dealt with the frustration of publisher-supplied information being the only source to use when assessing a book and wanted a way for everyone involved in music education to aggregate a knowledge base in a focused manner.</p>
+
+                <div class="icon-container">
+                        <img class="tech-icon" src="Images/nodejs_express.png">
+                        <img class="tech-icon" src="Images/postgresql-logo.jpg">
+                        <img class="tech-icon" src="Images/heroku-vector-logo.png">
+                    <img class="tech-icon" src="Images/JavaScript-logo-training.png">
+                    <img class="tech-icon" src="Images/HTML5_Logo_256.png">
+                    <img class="tech-icon" src="Images/css-logo-288.png">
+
+                </div>
+                <p class="portfolio-links">
+                    <a href="https://github.com/hotdogmcgee/music-book-review--client" target="blank">Client GitHub</a> 
+                    / 
+                    <a href="https://github.com/hotdogmcgee/music-book-review--server" target="blank">Server GitHub</a> 
+                    / 
+                    <a href="https://music-book-review-app.now.sh/" target="blank">Live</a>
+                </p>
+            </div>
 
             <div class="portfolio-project">
                 <div class="portfolio-image-container">
@@ -118,26 +160,6 @@
             </div>
 
             <div class="portfolio-project">
-                <div class="portfolio-image-container">
-                    <img class="portfolio-image" src="https://github.com/hotdogmcgee/Portfolio-Website/blob/master/Images/Quiz%20App%20screenshot-compressed.JPG?raw=true">
-                </div>
-                <h3>Classical Guitar Quiz App</h2>
-                <p>Take a ten-question quiz on the world of classical guitar. The Quiz App uses jQuery DOM manipulation to render each page.</p>
-                <div class="icon-container">
-                    <img class="tech-icon" src="Images/jquery-logo-png--512.png">
-                    <img class="tech-icon" src="Images/JavaScript-logo-training.png">
-                    <img class="tech-icon" src="Images/HTML5_Logo_256.png">
-                    <img class="tech-icon" src="Images/css-logo-288.png">
-
-                </div>
-                <p class="portfolio-links">
-                    <a href="https://github.com/hotdogmcgee/Thinkful-Quiz-App---Module-8.7-8" target="_blank">GitHub</a> 
-                    / 
-                    <a href="https://hotdogmcgee.github.io/Thinkful-Quiz-App---Module-8.7-8/" target="_blank">Live</a>
-                </p>
-            </div>
-
-            <div class="portfolio-project">
                 <h3>More Projects on the Way!</h2>
             </div>
         </section>
@@ -156,6 +178,6 @@
             <span>Top</span>
             </button>
     </main>
-    <footer role="content-info">&copy; Kevin Robinson 2019</footer>
+    <footer role="content-info">&copy; Kevin Robinson 2020</footer>
 </body>
 </html>
