add email link, update code a bit

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section role="title" class="hero">
             <h1><span class="hero-symbols">&#9900;</span>  Hi, my name is Kevin. 
                 <br>
-                 I am studying fullstack web development, here are some projects I enjoyed creating.  <span class="hero-symbols">&#9900;</span></h1>
+                 I am a fullstack web developer, here are some projects I enjoyed creating.  <span class="hero-symbols">&#9900;</span></h1>
             </section>
 
         <section class="button-group-main">
@@ -57,7 +57,7 @@
             <div class="headshot-container">
                 <img class="headshot" src="https://i.imgur.com/Ft37cT0.jpg">
             </div>
-            <p>I started studying web development with Thinkful.com recently, and am having a great time working up my skills. Learning how to program and design websites has been fascinating.  The puzzles posed and the answers required have really tested my ability to work logically and reduce complex ideas to simple ones.  Using the web development processes I have learned thus far has been very satisfying and I look forward to expanding my talents.</p>
+            <p>I began my web development career in 2018, and am having a great time working up my skills. Learning how to program and design websites has been fascinating.  The puzzles posed and the answers required have really tested my ability to work logically and reduce complex ideas to simple ones.  Using the web development processes I have learned has been very satisfying and I look forward to expanding my talents.</p>
             
             <br>
             <p>In addition to fullstack development, I am also a professional classical guitarist.  Playing music is a real joy, and sharing my love of the art form with others is always a wonderful experience.  When not playing music I can be caught playing card games, shooting a basketball, reading a book, or collecting CDs (do not let anyone say it's an outdated medium!).</p>
@@ -167,10 +167,11 @@
         <hr>
 
         <section id="contact">
-            <h3>I can be found on these platforms.</h3>
+            <h3>Contact</h3>
             <div role="group" class="contact-buttons">
-                <span><a href="https://github.com/hotdogmcgee/" target="_blank"><img class="contact-icons" src="https://github.com/hotdogmcgee/Portfolio-Website/blob/master/Images/github%20icon.png?raw=true"></a></span>
-                <span><a href="https://linkedin.com/in/kevin-robinson-a05b5b181" target="_blank"><img  class="contact-icons"src="https://github.com/hotdogmcgee/Portfolio-Website/blob/master/Images/linkedIn%20icon.png?raw=true"></a></span>
+                <span><a href="mailto:kevinrobinsondeveloper@gmail.com" target="_blank"><img class="contact-icons" src="Images/gmail-icon.png" alt="email"></a></span>
+                <span><a href="https://github.com/hotdogmcgee/" target="_blank"><img class="contact-icons" src="Images/github icon.png" alt="github"></a></span>
+                <span><a href="https://linkedin.com/in/kevin-robinson-a05b5b181" target="_blank"><img  class="contact-icons" src="Images/linkedIn icon.png" alt="linkedIn"></a></span>
             </div>
         </section>
 
