add further valid HTML

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <section id="bio">
             <div class="headshot-container">
-                <img class="headshot" src="https://i.imgur.com/Ft37cT0.jpg">
+                <img class="headshot" src="https://i.imgur.com/Ft37cT0.jpg" alt="kevin-headshot">
             </div>
             <p>I began my web development career in 2018, and am having a great time working up my skills. Learning how to program and design websites has been fascinating.  The puzzles posed and the answers required have really tested my ability to work logically and reduce complex ideas to simple ones.  Using the web development processes I have learned has been very satisfying and I look forward to expanding my talents.</p>
             
@@ -95,7 +95,7 @@
 
             <div class="portfolio-project">
                 <div class="portfolio-image-container">
-                    <img class="portfolio-image" src="Images/tonewoodcapture-desktop.JPG">
+                    <img class="portfolio-image" src="Images/tonewoodcapture-desktop.JPG" alt="tonewood-data-project">
                 </div>
                 <h3>Tonewood Data Project</h3>
                 <p>A fullstack application that brings together luthiers worldwide to make it easy to find the properties of many tonewoods. API created for CRUD operations and log-in functionality.</p>
@@ -120,9 +120,9 @@
 
             <div class="portfolio-project">
                     <div class="portfolio-image-container">
-                        <img class="portfolio-image" src="Images/Notefulcapture.jpg">
+                        <img class="portfolio-image" src="Images/Notefulcapture.jpg" alt="noteful">
                     </div>
-                    <h3>Noteful</h2>
+                    <h3>Noteful</h3>
                     <p>A fullstack application that allows users to create notes that can be placed in folders. API created for CRUD operations. Current build used to express full stack functionality, please excuse mobile display issues.</p>
                     <div class="icon-container">
                         <img class="tech-icon" src="Images/nodejs_express.png" alt="nodejs">
@@ -144,9 +144,9 @@
             
             <div class="portfolio-project">
                 <div class="portfolio-image-container">
-                    <img class="portfolio-image" src="Images/Bestseller-Finder-Desktop-Screenshot.JPG">
+                    <img class="portfolio-image" src="Images/Bestseller-Finder-Desktop-Screenshot.JPG" alt="book-bestseller-finder">
                 </div>
-                <h3>Book Bestseller Finder</h2>
+                <h3>Book Bestseller Finder</h3>
                 <p>An app that allows the user to find lists of New York Times Bestsellers. The app will then allow a user to see if the book is available in the Harvard library system. This makes use of the New York Times Book API, as well as Harvard's LibCloud API.</p>
                 <div class="icon-container">
                     <img class="tech-icon" src="Images/jquery-logo-png--512.png" alt="jquery">
