update book review link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     / 
                     <a href="https://github.com/hotdogmcgee/music-book-review--server" target="blank">Server GitHub</a> 
                     / 
-                    <a href="https://music-book-review-app.now.sh/" target="blank">Live</a>
+                    <a href="https://music-book-review-client.now.sh/" target="blank">Live</a>
                 </p>
             </div>
 
