--- a/index.html
+++ b/index.html
@@ -175,33 +175,100 @@
           <div class="portfolio-image-container">
             <img
               class="portfolio-image"
+              src="Images/yblio-screengrab.jpg"
+              alt="your brake light is out"
+            />
+          </div>
+          <h3>Your Brake Light is Out - Full Stack Developer</h3>
+          <p>
+            Help save lives and prevent accidents by ensuring everyone's brake
+            lights work.
+          </p>
+          <p>
+            A web app that I developed solo for a client, released in 2022. A
+            key aspect of YBLIO is protecting user data. There will be more to
+            build, it is currently closer to an MVP state.
+          </p>
+          <p>
+            Users are guided through a form wizard to either set up a
+            notification for their own plate or report another. The goal is to
+            know as soon as possible if a brake, tail, or head light is out.
+          </p>
+          <div class="icon-container">
+            <img class="tech-icon" src="Images/reactsymbol.png" alt="reactjs" title="React"/>
+            <img class="tech-icon" src="Images/materialui-logo.png" alt="materialui" title="Material UI"/>
+            <img
+              class="tech-icon"
+              src="Images/nodejs_express.png"
+              alt="nodejs"
+              title="Node.js"
+            />
+            <img
+              class="tech-icon"
+              src="Images/postgresql-logo.jpg"
+              alt="postgresql"
+              title="PostgresSQL"
+            />
+            <img
+            class="tech-icon"
+            src="Images/sendgrid-logo.jpg"
+            alt="sendgrid"
+            title="Twilio Sendgrid"
+          />
+            <img
+              class="tech-icon"
+              src="Images/heroku-vector-logo.png"
+              alt="heroku"
+              title="Heroku"
+            />
+            <img
+            class="tech-icon"
+            src="Images/now-zeit-logo.jpg"
+            alt="now/zeit"
+            title="Vercel"
+          />
+            <img
+              class="tech-icon"
+              src="Images/JavaScript-logo-training.png"
+              alt="javascript"
+              title="Javascript"
+            />
+            <img class="tech-icon" src="Images/HTML5_Logo_256.png" alt="html" title="HTML"/>
+            <img class="tech-icon" src="Images/css-logo-288.png" alt="css" title="CSS"/>
+            <p class="portfolio-links">
+              <a href="https://www.yblio.com" target="blank">Go to the App</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="portfolio-project">
+          <div class="portfolio-image-container">
+            <img
+              class="portfolio-image"
               src="Images/hrn-screencap.jpg"
               alt="hi-right-now"
             />
-            </div>
-            <h3>Hi Right Now - Backend Developer Intern</h3>
-            <p>
-              Empowering communities to form meaningful connections, one 1:1
-              video conversation at a time
-            </p>
-            <p>I created a large portion of the app's backend, including the database and API, in addition to frontend work. Much of the complexity in the app is connecting video partners and running events smoothly. Our small and remote team worked together to build a product that had many challenging architectural considerations.</p>
-            <p>I worked at Hi Right Now in the summer of 2020.</p>
+          </div>
+          <h3>Hi Right Now - Backend Developer Intern</h3>
+          <p>
+            Empowering communities to form meaningful connections, one 1:1 video
+            conversation at a time
+          </p>
+          <p>
+            I created a large portion of the app's backend, including the
+            database and API, in addition to frontend work. Much of the
+            complexity in the app is connecting video partners and running
+            events smoothly. Our small and remote team worked together to build
+            a product that had many challenging architectural considerations.
+          </p>
+          <p>
+            I worked at Hi Right Now in the summer of 2020. The company changed
+            direction in 2021, the app I was involved with is no longer live.
+          </p>
           <div class="icon-container">
-            <img
-            class="tech-icon"
-            src="Images/reactsymbol.png"
-            alt="reactjs"
-          />
-          <img
-            class="tech-icon"
-            src="Images/graphql.png"
-            alt="graphql"
-          />
-          <img
-            class="tech-icon"
-            src="Images/hasura.png"
-            alt="hasura"
-          />
+            <img class="tech-icon" src="Images/reactsymbol.png" alt="reactjs" />
+            <img class="tech-icon" src="Images/graphql.png" alt="graphql" title="GraphQL"/>
+            <img class="tech-icon" src="Images/hasura.png" alt="hasura" title="Hasura"/>
             <img
               class="tech-icon"
               src="Images/nodejs_express.png"
@@ -217,16 +284,8 @@
               src="Images/heroku-vector-logo.png"
               alt="heroku"
             />
-            <img
-            class="tech-icon"
-            src="Images/dockersymbol.png"
-            alt="docker"
-          />
-          <img
-            class="tech-icon"
-            src="Images/apollo.png"
-            alt="apollo"
-          />
+            <img class="tech-icon" src="Images/dockersymbol.png" alt="docker" title="Docker" />
+            <img class="tech-icon" src="Images/apollo.png" alt="apollo" />
             <img
               class="tech-icon"
               src="Images/JavaScript-logo-training.png"
@@ -235,18 +294,16 @@
             <img class="tech-icon" src="Images/HTML5_Logo_256.png" alt="html" />
             <img class="tech-icon" src="Images/css-logo-288.png" alt="css" />
             <p class="portfolio-links">
-                <a
+              <!-- <a
                   href="https://launch.hirightnow.co/"
                   target="blank"
                   >App</a
                 >
-                /
-                <a href="https://www.hirightnow.co/" target="blank"
-                  >Company</a
-                >
-              </p>
+                / -->
+              <a href="https://www.hirightnow.co/" target="blank">Company</a>
+            </p>
+          </div>
         </div>
-    </div>
 
         <div class="portfolio-project">
           <div class="portfolio-image-container">
@@ -269,11 +326,7 @@
           </p>
 
           <div class="icon-container">
-            <img
-            class="tech-icon"
-            src="Images/reactsymbol.png"
-            alt="reactjs"
-          />
+            <img class="tech-icon" src="Images/reactsymbol.png" alt="reactjs" />
             <img
               class="tech-icon"
               src="Images/nodejs_express.png"
@@ -336,11 +389,7 @@
             for CRUD operations and log-in functionality.
           </p>
           <div class="icon-container">
-            <img
-            class="tech-icon"
-            src="Images/reactsymbol.png"
-            alt="reactjs"
-          />
+            <img class="tech-icon" src="Images/reactsymbol.png" alt="reactjs" />
             <img
               class="tech-icon"
               src="Images/nodejs_express.png"
@@ -402,11 +451,7 @@
             display issues.
           </p>
           <div class="icon-container">
-            <img
-            class="tech-icon"
-            src="Images/reactsymbol.png"
-            alt="reactjs"
-          />
+            <img class="tech-icon" src="Images/reactsymbol.png" alt="reactjs" />
             <img
               class="tech-icon"
               src="Images/nodejs_express.png"
